# FrogWM

./: CMakeLists.txt  README.md  main.cpp  run.sh  window_manager.cpp  window_manager.hpp  window_utils.cpp  window_utils.hpp
src/: client.cc  client.h  config.h  config.h.in  main.cc  window_manager.cc  window_manager.h  window_utils.cc
